# agent-skills

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
scripts/: install.sh  uninstall.sh
skills/gitbook-docs/: SKILL.md
skills/gitbook-docs/assets/templates/: SUMMARY.md  gitbook.yaml  vars.yaml
skills/gitbook-docs/assets/templates/pages/: README.md  architecture-overview.md  architecture-subsystem.md  contributing.md  development-setup.md  getting-started.md  troubleshooting.md
skills/gitbook-docs/evals/: trigger-evals.json
skills/gitbook-docs/references/: custom-blocks.md
skills/plan-design-build/: SKILL.md
skills/plan-design-build/assets/: PLAN_TEMPLATE.md
tests/: conftest.py  test_structure.py  test_trigger.py
