[project]
name = "agent-skills"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "skills-ref @ git+https://github.com/agentskills/agentskills.git#subdirectory=skills-ref",
    "pytest>=7.0",
    "pytest-xdist>=3.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
tmp_path_retention_policy = "failed"
addopts = "--basetemp=.pytest-artifacts"
markers = [
    "structure: skill structure validation, no API calls",
    "trigger: trigger quality evals, requires ANTHROPIC_API_KEY",
    "output: output quality evals, slow, requires ANTHROPIC_API_KEY",
]
